[gd_scene load_steps=8 format=2]

[ext_resource path="res://tileset.tres" type="TileSet" id=1]
[ext_resource path="res://Box.tscn" type="PackedScene" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://TestLevel2 OWEN'S DO NOT TOUCH!!!!.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 14.5 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 96, 14.25 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 30, 28.5 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 32 )
format = 1
tile_data = PoolIntArray( -589840, 26, 0, -589839, 23, 0, -589838, 23, 0, -589837, 23, 0, -589836, 23, 0, -589835, 23, 0, -589834, 23, 0, -589833, 23, 0, -589832, 23, 0, -589831, 23, 0, -589830, 23, 0, -589829, 23, 0, -589828, 23, 0, -589827, 23, 0, -589826, 26, 0, -589825, 26, 0, -655360, 26, 0, -655359, 26, 0, -655358, 23, 0, -655357, 23, 0, -655356, 23, 0, -655355, 23, 0, -655354, 23, 0, -655353, 23, 0, -655352, 23, 0, -655351, 23, 0, -655350, 23, 0, -655349, 23, 0, -655348, 23, 0, -655347, 23, 0, -655346, 23, 0, -655345, 26, 0, -524304, 24, 0, -524290, 25, 0, -524289, 26, 0, -589824, 26, 0, -589823, 24, 0, -589809, 25, 0, -458768, 24, 0, -458754, 25, 0, -458753, 26, 0, -524288, 26, 0, -524287, 24, 0, -524273, 25, 0, -393232, 24, 0, -393218, 25, 0, -393217, 26, 0, -458752, 26, 0, -458751, 24, 0, -458737, 25, 0, -327696, 24, 0, -327682, 25, 0, -327681, 26, 0, -393216, 26, 0, -393215, 24, 0, -393201, 25, 0, -262160, 24, 0, -262146, 25, 0, -262145, 26, 0, -327680, 26, 0, -327679, 24, 0, -327665, 25, 0, -196624, 24, 0, -196610, 25, 0, -196609, 26, 0, -262144, 26, 0, -262143, 24, 0, -262129, 25, 0, -131088, 24, 0, -131074, 25, 0, -131073, 26, 0, -196608, 26, 0, -196607, 24, 0, -196593, 25, 0, -65552, 26, 0, -65551, 17, 0, -65550, 17, 0, -65549, 17, 0, -65548, 17, 0, -65547, 17, 0, -65546, 17, 0, -65545, 17, 0, -65544, 16, 0, -65538, 25, 0, -65537, 26, 0, -131072, 26, 0, -131071, 24, 0, -131065, 15, 0, -131064, 17, 0, -131063, 17, 0, -131062, 17, 0, -131061, 17, 0, -131060, 17, 0, -131059, 17, 0, -131058, 17, 0, -131057, 26, 0, -16, 24, 0, -2, 25, 0, -1, 26, 0, -65536, 26, 0, -65535, 24, 0, -65521, 25, 0, 65520, 24, 0, 65534, 25, 0, 65535, 26, 0, 0, 26, 0, 1, 24, 0, 15, 25, 0, 131056, 24, 0, 131070, 25, 0, 131071, 26, 0, 65536, 26, 0, 65537, 24, 0, 65551, 25, 0, 196592, 24, 0, 196598, 18, 0, 196599, 22, 0, 196600, 22, 0, 196601, 22, 0, 196602, 22, 0, 196603, 22, 0, 196604, 22, 0, 196605, 22, 0, 196606, 26, 0, 196607, 26, 0, 131072, 26, 0, 131073, 26, 0, 131074, 22, 0, 131075, 22, 0, 131076, 22, 0, 131077, 22, 0, 131078, 22, 0, 131079, 22, 0, 131080, 22, 0, 131081, 19, 0, 131087, 25, 0, 262128, 24, 0, 262134, 20, 0, 262135, 23, 0, 262136, 23, 0, 262137, 23, 0, 262138, 23, 0, 262139, 23, 0, 262140, 23, 0, 262141, 23, 0, 262142, 23, 0, 262143, 23, 0, 196608, 23, 0, 196609, 23, 0, 196610, 23, 0, 196611, 23, 0, 196612, 23, 0, 196613, 23, 0, 196614, 23, 0, 196615, 23, 0, 196616, 23, 0, 196617, 21, 0, 196623, 25, 0, 327664, 24, 0, 262159, 25, 0, 393200, 24, 0, 327695, 25, 0, 458736, 24, 0, 393231, 25, 0, 524272, 24, 0, 458767, 25, 0, 589808, 24, 0, 524303, 25, 0, 655344, 26, 0, 655345, 22, 0, 655346, 22, 0, 655347, 22, 0, 655348, 22, 0, 655349, 22, 0, 655350, 22, 0, 655351, 22, 0, 655358, 22, 0, 655359, 22, 0, 589824, 22, 0, 589825, 22, 0, 589832, 22, 0, 589833, 22, 0, 589834, 22, 0, 589835, 22, 0, 589836, 22, 0, 589837, 22, 0, 589838, 22, 0, 589839, 26, 0, 720888, 22, 0, 720889, 22, 0, 720890, 22, 0, 720891, 22, 0, 720892, 22, 0, 720893, 22, 0, 655362, 22, 0, 655363, 22, 0, 655364, 22, 0, 655365, 22, 0, 655366, 22, 0, 655367, 22, 0 )

[node name="Box" parent="." instance=ExtResource( 2 )]
position = Vector2( 324, -143 )

[node name="Box2" parent="." instance=ExtResource( 2 )]
position = Vector2( -332, -106 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( -407, -138 )

[node name="Player2" parent="." instance=ExtResource( 3 )]
position = Vector2( 413, -162 )
player_num = 1

[node name="KillBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KillBox"]
position = Vector2( -160, 305.5 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="KillBox"]
position = Vector2( 160, 305.25 )
shape = SubResource( 2 )

[node name="ColorRect" type="ColorRect" parent="KillBox"]
margin_left = -256.0
margin_top = 291.0
margin_right = -64.0
margin_bottom = 320.0
color = Color( 1, 0, 0, 1 )

[node name="ColorRect2" type="ColorRect" parent="KillBox"]
margin_left = 64.0
margin_top = 291.0
margin_right = 256.0
margin_bottom = 320.0
color = Color( 1, 0, 0, 1 )

[node name="WinBox" type="Area2D" parent="."]
show_behind_parent = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="WinBox"]
position = Vector2( 0, 259.5 )
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="WinBox"]
margin_left = -30.0
margin_top = 231.0
margin_right = 30.0
margin_bottom = 288.0
color = Color( 0.658824, 0.937255, 0.627451, 1 )

[connection signal="body_entered" from="KillBox" to="." method="_on_KillBox_body_entered"]
[connection signal="body_entered" from="WinBox" to="." method="_on_WinBox_body_entered"]
[connection signal="body_exited" from="WinBox" to="." method="_on_WinBox_body_exited"]
